--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
     "version": "1.0.0",
     "description": "API para gerenciar pedidos de mesas de um restaurante",
     "main": "index.js",
-    "scripts": {},
+    "scripts": {
+        "dev": "tsx watch src/server.ts"
+    },
     "keywords": [],
     "author": "Paulo Henrique",
     "license": "ISC",
     "dependencies": {
-        "express": "^5.1.0"
+        "express": "^5.1.0",
+        "tsx": "^4.19.4"
     },
     "devDependencies": {
+        "@types/express": "^5.0.2",
         "@types/node": "^22.15.21",
         "typescript": "^5.8.3"
     }
