:rocket: get e post de produtos

--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
     "description": "API para gerenciar pedidos de mesas de um restaurante",
     "main": "index.js",
     "scripts": {
-        "dev": "tsx watch src/server.ts"
+        "dev": "tsx watch src/server.ts",
+        "knex": "tsx ./node_modules/knex/bin/cli.js"
     },
     "keywords": [],
     "author": "Paulo Henrique",
     "license": "ISC",
     "dependencies": {
         "express": "^5.1.0",
-        "tsx": "^4.19.4"
+        "knex": "^3.1.0",
+        "sqlite3": "^5.1.7",
+        "tsx": "^4.19.4",
+        "zod": "^3.25.31"
     },
     "devDependencies": {
         "@types/express": "^5.0.2",
